# agent-harness-benchmark

./: AGENT_FRAMEWORK_USAGE.md  README.md  ROADMAP.md  SCORING.md  TRACKS.md
go/: BASELINE.md  BENCHMARK.md  HIDDEN_CASES.md  README.md  REPO_PLAN.md  TASK.md
go/repo-template/: README.md  executor.go  executor_test.go  go.mod  integration_test.go  parser.go  parser_test.go  reporter.go  reporter_test.go  scheduler.go  scheduler_test.go
java/: BASELINE.md  BENCHMARK.md  HIDDEN_CASES.md  README.md  REPO_PLAN.md  TASK.md
java/repo-template/: README.md  pom.xml
kotlin/: BASELINE.md  BENCHMARK.md  HIDDEN_CASES.md  README.md  REPO_PLAN.md  TASK.md
kotlin/repo-template/: README.md  build.gradle.kts  settings.gradle.kts
node/: BASELINE.md  BENCHMARK.md  HIDDEN_CASES.md  README.md  REPO_PLAN.md  TASK.md
node/repo-template/: .gitignore  README.md  package.json
python/: BASELINE.md  BENCHMARK.md  HIDDEN_CASES.md  README.md  REPO_PLAN.md  TASK.md
python/repo-template/: .gitignore  README.md  pyproject.toml
python/repo-template/app/: cli.py  metrics.py  models.py  queue.py  retry.py  storage.py  worker.py
python/repo-template/data/: seed_jobs.json
python/repo-template/scripts/: gen_benchmark_data.py  run_demo.py
python/repo-template/tests/: test_cli.py  test_even_more_regressions.py  test_metrics.py  test_more_regressions.py  test_queue.py  test_regression.py  test_retry.py  test_storage.py  test_worker.py
swift/: BASELINE.md  BENCHMARK.md  HIDDEN_CASES.md  README.md  REPO_PLAN.md  TASK.md
swift/repo-template/: Package.swift  README.md
(+54 files in other folders)
